[gd_scene load_steps=9 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://scripts/cards/card.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("card_container:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("card_container/card_back:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("card_container/card_back:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2.581, 5.57 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("card_container/card_texture:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("card_container/card_bg:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("card_container/card_bg:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2.581, 5.57 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("card_container/card_texture:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2.581, 5.57 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("card_container/card_atts:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=2]
resource_name = "deselected"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("card_container:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 3, -104 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "flip"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("card_container/card_back:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( -0.4, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("card_container/card_back:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 2.581, 5.57 ), Vector2( 0.478, 5.57 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("card_container/card_texture:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("card_container/card_bg:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("card_container/card_bg:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 5.57 ), Vector2( 2.581, 5.57 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("card_container/card_texture:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 5.57 ), Vector2( 2.581, 5.57 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("card_container/card_atts:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=3]
resource_name = "selected"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("card_container:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 3, -280 ) ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 84, 183.5 )

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0, 0.0782123, 0.21229, 1 )
colors = PoolColorArray( 1, 0, 0, 1, 0.863281, 0.273464, 0.212448, 1, 1, 0.932306, 0.212291, 1, 1, 1, 1, 1 )

[node name="card" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_top = -214.0
margin_right = 165.0
margin_bottom = 348.0
rect_rotation = -0.121748

[node name="card_container" type="Node2D" parent="."]

[node name="card_bg" type="Sprite" parent="card_container"]
position = Vector2( 86, 176.75 )
scale = Vector2( 2.581, 5.57 )
texture = ExtResource( 1 )

[node name="card_texture" type="Sprite" parent="card_container"]
position = Vector2( 83, 176.75 )
scale = Vector2( 2.581, 5.57 )
texture = ExtResource( 1 )

[node name="card_back" type="Sprite" parent="card_container"]
visible = false
modulate = Color( 0.0823529, 1, 0.0313726, 1 )
position = Vector2( 78, 175 )
scale = Vector2( 2.581, 5.57 )
texture = ExtResource( 1 )

[node name="highlight" type="Sprite" parent="card_container"]
visible = false
modulate = Color( 1, 0, 0, 0.329412 )
position = Vector2( 84, 176.75 )
scale = Vector2( 2.581, 5.57 )
texture = ExtResource( 1 )

[node name="card_atts" type="Control" parent="card_container"]
margin_right = 40.0
margin_bottom = 40.0

[node name="card_desc" type="Label" parent="card_container/card_atts"]
margin_left = 13.0
margin_top = 215.0
margin_right = 156.0
margin_bottom = 324.0

[node name="card_name" type="Label" parent="card_container/card_atts"]
margin_left = 13.0
margin_top = 9.0
margin_right = 158.0
margin_bottom = 30.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/deselected = SubResource( 2 )
anims/flip = SubResource( 6 )
anims/selected = SubResource( 3 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 74, 173.5 )
shape = SubResource( 4 )

[node name="line" type="Line2D" parent="."]
points = PoolVector2Array( 69, -29 )
gradient = SubResource( 5 )

[node name="line_start" type="Position2D" parent="."]
position = Vector2( 77, -10 )
